--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,8 +26,26 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
+    
+    <!--SCRIPTS-->
+    <script src="/linker/js/socket.io.js"></script>
+    <script src="/linker/js/sails.io.js"></script>
+    <script src="/linker/js/app.js"></script>
+    <!--SCRIPTS END-->
+
+    <!-- Temporary add arg on url beacuse require-js is put in cache -->
+    <script type="text/javascript">
+      var require = {
+          waitSeconds: 5,
+          urlArgs : "bust="+new Date().getTime()
+      };
+    </script>
+    <script data-main="/linker/main.js" src="/linker/js/require-jquery.js"></script>
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/linker/styles/stylesheets/ie.css">
+    <link rel="stylesheet" href="/linker/styles/stylesheets/print.css">
+    <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
     <!--STYLES END-->
   </head>
 
@@ -58,6 +76,7 @@
     -->
 
     <!--TEMPLATES-->
+    
     <!--TEMPLATES END-->
 
 
@@ -83,7 +102,6 @@
 
     -->
 
-    <!--SCRIPTS-->
-    <!--SCRIPTS END-->
+
   </body>
 </html>
