add example config/bootstrap.js communication

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,10 +27,18 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
     
+
+    <!--STYLES-->
+    <link rel="stylesheet" href="/linker/styles/stylesheets/ie.css">
+    <link rel="stylesheet" href="/linker/styles/stylesheets/print.css">
+    <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
+    <!--STYLES END-->
+    
     <!--SCRIPTS-->
-    <script src="/linker/js/socket.io.js"></script>
-    <script src="/linker/js/sails.io.js"></script>
-    <script src="/linker/js/app.js"></script>
+    <script src="/linker/js/libs/socket.io.js"></script>
+    <script src="/linker/js/libs/sails.io.js"></script>
+    <script src="/linker/js/libs/jquery-2.0.3.min.js"></script>
+    <script src="/linker/js/libs/bootstrap.min.js"></script>
     <!--SCRIPTS END-->
 
     <!-- Temporary add arg on url beacuse require-js is put in cache -->
@@ -40,13 +48,11 @@
           urlArgs : "bust="+new Date().getTime()
       };
     </script>
-    <script data-main="/linker/main.js" src="/linker/js/require-jquery.js"></script>
+    <script data-main="/linker/main.js" src="/linker/js/libs/require-jquery.js"></script>
 
-    <!--STYLES-->
     <link rel="stylesheet" href="/linker/styles/stylesheets/ie.css">
     <link rel="stylesheet" href="/linker/styles/stylesheets/print.css">
     <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
-    <!--STYLES END-->
   </head>
 
   <body>
