add boostrap css

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
     
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/linker/styles/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/linker/styles/stylesheets/ie.css">
     <link rel="stylesheet" href="/linker/styles/stylesheets/print.css">
     <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
@@ -50,9 +51,6 @@
     </script>
     <script data-main="/linker/main.js" src="/linker/js/libs/require-jquery.js"></script>
 
-    <link rel="stylesheet" href="/linker/styles/stylesheets/ie.css">
-    <link rel="stylesheet" href="/linker/styles/stylesheets/print.css">
-    <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
   </head>
 
   <body>
