--- a/assets/linker/styles/sass/screen.sass
+++ b/assets/linker/styles/sass/screen.sass
@@ -1,7 +1,47 @@
-/*
-  Welcome to Compass.
-  In this file you should write your main styles. (or centralize your imports)
-  Import this file using the following HTML or equivalent:
-  <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
 @import compass/reset
+@import compass/css3
+
+body, html, .container
+	width: 100%
+	height: 100%
+
+#connexion
+	// display : none
+
+
+
+#control
+	display : table
+	height : 100%
+	width : 100%
+	display : none
+	.part
+		display : table-cell
+		vertical-align: middle
+		text-align: center
+		height : 30px
+		float : inherit
+
+	#direction
+		+border-radius(10px)
+		background : #333
+		display : block
+		position : absolute
+		bottom : 0
+		top : 0
+		right : 0
+		left : 0
+		margin : 20px
+
+	.btn
+		width : 100px
+		height : 100px
+		+border-radius(50px)
+		background : #333
+		margin : 0 0 0 15px
+		color : #999
+		font-size : 60px
+		font-family: helvetica
+		&.active
+			background : #be2620
+			color : white
