--- a/assets/linker/styles/stylesheets/screen.css
+++ b/assets/linker/styles/stylesheets/screen.css
@@ -1,7 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /* line 17, ../../../../../../../../var/lib/gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -65,4 +61,62 @@ a img {
 /* line 116, ../../../../../../../../var/lib/gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
+}
+
+/* line 4, ../sass/screen.sass */
+body, html, .container {
+  width: 100%;
+  height: 100%;
+}
+
+/* line 13, ../sass/screen.sass */
+#control {
+  display: table;
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+/* line 18, ../sass/screen.sass */
+#control .part {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  height: 30px;
+  float: inherit;
+}
+/* line 25, ../sass/screen.sass */
+#control #direction {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+  background: #333333;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  right: 0;
+  left: 0;
+  margin: 20px;
+}
+/* line 36, ../sass/screen.sass */
+#control .btn {
+  width: 100px;
+  height: 100px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  border-radius: 50px;
+  background: #333333;
+  margin: 0 0 0 15px;
+  color: #999999;
+  font-size: 60px;
+  font-family: helvetica;
+}
+/* line 45, ../sass/screen.sass */
+#control .btn.active {
+  background: #be2620;
+  color: white;
 }
