--- a/assets/linker/styles/sass/screen.sass
+++ b/assets/linker/styles/sass/screen.sass
@@ -4,6 +4,7 @@
 body, html, .container
 	width: 100%
 	height: 100%
+	-webkit-user-select: none
 
 #connexion
 	// display : none
@@ -32,7 +33,7 @@ body, html, .container
 		right : 0
 		left : 0
 		margin : 20px
-
+		-webkit-user-select: none
 	.btn
 		width : 100px
 		height : 100px
@@ -42,6 +43,7 @@ body, html, .container
 		color : #999
 		font-size : 60px
 		font-family: helvetica
+		-webkit-user-select: none
 		&.active
 			background : #be2620
 			color : white
