--- a/assets/linker/styles/stylesheets/screen.css
+++ b/assets/linker/styles/stylesheets/screen.css
@@ -67,16 +67,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body, html, .container {
   width: 100%;
   height: 100%;
+  -webkit-user-select: none;
 }
 
-/* line 13, ../sass/screen.sass */
+/* line 14, ../sass/screen.sass */
 #control {
   display: table;
   height: 100%;
   width: 100%;
   display: none;
 }
-/* line 18, ../sass/screen.sass */
+/* line 19, ../sass/screen.sass */
 #control .part {
   display: table-cell;
   vertical-align: middle;
@@ -84,7 +85,7 @@ body, html, .container {
   height: 30px;
   float: inherit;
 }
-/* line 25, ../sass/screen.sass */
+/* line 26, ../sass/screen.sass */
 #control #direction {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -99,8 +100,9 @@ body, html, .container {
   right: 0;
   left: 0;
   margin: 20px;
+  -webkit-user-select: none;
 }
-/* line 36, ../sass/screen.sass */
+/* line 37, ../sass/screen.sass */
 #control .btn {
   width: 100px;
   height: 100px;
@@ -114,8 +116,9 @@ body, html, .container {
   color: #999999;
   font-size: 60px;
   font-family: helvetica;
+  -webkit-user-select: none;
 }
-/* line 45, ../sass/screen.sass */
+/* line 47, ../sass/screen.sass */
 #control .btn.active {
   background: #be2620;
   color: white;
