--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
+    <link rel="stylesheet" href="/linker/styles/stylesheets/bootstrap.min.css">
     <!--STYLES END-->
     
     <!--SCRIPTS-->
