add meta info layout.ejs

--- a/assets/linker/styles/sass/screen.sass
+++ b/assets/linker/styles/sass/screen.sass
@@ -15,7 +15,7 @@ body, html, .container
 	display : table
 	height : 100%
 	width : 100%
-	display : none
+	// display : none
 	.part
 		display : table-cell
 		vertical-align: middle
@@ -35,11 +35,11 @@ body, html, .container
 		margin : 20px
 		-webkit-user-select: none
 	.btn
-		width : 100px
-		height : 100px
-		+border-radius(50px)
+		width : 40%
+		height : 40%
+		+border-radius(5000px)
 		background : #333
-		margin : 0 0 0 15px
+		// margin : 0 0 0 15px
 		color : #999
 		font-size : 60px
 		font-family: helvetica
