--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,8 +5,8 @@
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+<!--     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes"> -->
     <!--  
         Stylesheets and Preprocessors
         ==============================
@@ -30,6 +30,7 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
+    <link rel="stylesheet" href="/linker/styles/stylesheets/bootstrap.min.css">
     <!--STYLES END-->
     
     <!--SCRIPTS-->
