--- a/views/players/home.ejs
+++ b/views/players/home.ejs
@@ -9,15 +9,28 @@
 
     <div class="row" id="control">
 
+        <div id="info">
+            <div id="name"><div class="val">Pacman</div></div>
+            <div id="score">
+                Score
+                <div class="val">2020</div>
+            </div>
+        </div>
+
         <div class="part col-xs-6">
         <div id="direction"></div>
         </div> 
        <div class="part col-xs-6">
-            <div id="btn1" class="btn" data-id="a" >A</div>
-            <div id="btn1" class="btn" data-id="b" >B</div>
+            <div id="btnA" class="btn" data-id="a" >A</div>
+            <div id="btnB" class="btn" data-id="b" >B</div>
         </div> 
 
     </div>
 
 
 </div> <!-- /container -->
+
+
+<div id="alert_orientation">
+Votre appareil doit être en position paysage!
+</div>
