--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,10 +27,10 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
     
-
+    <link href='http://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css'>
     <!--STYLES-->
-    <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
     <link rel="stylesheet" href="/linker/styles/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/linker/styles/stylesheets/screen.css">
     <!--STYLES END-->
     
     <!--SCRIPTS-->
